tests/ui/errors/invalid_value.stderr
error: expected value after =
 --> tests/ui/errors/invalid_value.rs:5:15
  |
5 |         div a=a {}
  |               ^
  |
  = help: you may have meant to wrap this in braces

error: expected value after =
  --> tests/ui/errors/invalid_value.rs:19:16
   |
19 |         a href=();
   |                ^

error: extra semi-colon found
  --> tests/ui/errors/invalid_value.rs:19:18
   |
19 |         a href=();
   |                  ^
   |
   = help: remove this semi-colon

error: expected value after =
  --> tests/ui/errors/invalid_value.rs:27:15
   |
27 |         a href=
   |               ^

error: unterminated element
  --> tests/ui/errors/invalid_value.rs:27:9
   |
27 |         a href=
   |         ^
   |
   = help: add a `;` to terminate the element with no children

error[E0277]: the trait bound `MissingValueAfterEq: IntoAttribute` is not satisfied
 --> tests/ui/errors/invalid_value.rs:5:15
  |
4 |       _ = mview! {
  |  _________-
5 | |         div a=a {}
  | |               ^ the trait `Fn()` is not implemented for `MissingValueAfterEq`, which is required by `MissingValueAfterEq: IntoAttribute`
6 | |     };
  | |_____- required by a bound introduced by this call
  |
  = help: the following other types implement trait `IntoAttribute`:
            &'static str
            &std::string::String
            Arguments<'_>
            Cow<'static, str>
            Nonce
            Oco<'static, str>
            Rc<str>
            TextProp
          and $N others
  = note: required for `MissingValueAfterEq` to implement `IntoAttribute`
note: required by a bound in `leptos::HtmlElement::<El>::attr`
 --> $CARGO/leptos_dom-0.6.12/src/html.rs
  |
  |     pub fn attr(
  |            ---- required by a bound in this associated function
...
  |         attr: impl IntoAttribute,
  |                    ^^^^^^^^^^^^^ required by this bound in `HtmlElement::<El>::attr`

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> tests/ui/errors/invalid_value.rs:11:14
   |
11 |           div {..};
   |  ______________^^-
12 | |     };
   | |_____- an argument is missing
   |
note: method defined here
  --> $CARGO/leptos_dom-0.6.12/src/html.rs
   |
   |     pub fn attrs(
   |            ^^^^^
help: provide the argument
   |
10 |     _ = ..(/* attrs */);
   |         ~~~~~~~~~~~~~~~

error[E0277]: the trait bound `(): IntoAttribute` is not satisfied
  --> tests/ui/errors/invalid_value.rs:18:16
   |
17 |       _ = mview! {
   |  _________-
18 | |         a href={};
   | |                ^^ the trait `Fn()` is not implemented for `()`, which is required by `(): IntoAttribute`
19 | |         a href=();
20 | |         a href=[];
21 | |     };
   | |_____- required by a bound introduced by this call
   |
   = help: the following other types implement trait `IntoAttribute`:
             &'static str
             &std::string::String
             Arguments<'_>
             Cow<'static, str>
             Nonce
             Oco<'static, str>
             Rc<str>
             TextProp
           and $N others
   = note: required for `()` to implement `IntoAttribute`
note: required by a bound in `leptos::HtmlElement::<El>::attr`
  --> $CARGO/leptos_dom-0.6.12/src/html.rs
   |
   |     pub fn attr(
   |            ---- required by a bound in this associated function
...
   |         attr: impl IntoAttribute,
   |                    ^^^^^^^^^^^^^ required by this bound in `HtmlElement::<El>::attr`

error[E0277]: the trait bound `MissingValueAfterEq: IntoAttribute` is not satisfied
  --> tests/ui/errors/invalid_value.rs:19:16
   |
17 |       _ = mview! {
   |  _________-
18 | |         a href={};
19 | |         a href=();
   | |                ^ the trait `Fn()` is not implemented for `MissingValueAfterEq`, which is required by `MissingValueAfterEq: IntoAttribute`
20 | |         a href=[];
21 | |     };
   | |_____- required by a bound introduced by this call
   |
   = help: the following other types implement trait `IntoAttribute`:
             &'static str
             &std::string::String
             Arguments<'_>
             Cow<'static, str>
             Nonce
             Oco<'static, str>
             Rc<str>
             TextProp
           and $N others
   = note: required for `MissingValueAfterEq` to implement `IntoAttribute`
note: required by a bound in `leptos::HtmlElement::<El>::attr`
  --> $CARGO/leptos_dom-0.6.12/src/html.rs
   |
   |     pub fn attr(
   |            ---- required by a bound in this associated function
...
   |         attr: impl IntoAttribute,
   |                    ^^^^^^^^^^^^^ required by this bound in `HtmlElement::<El>::attr`

error[E0277]: expected a `Fn()` closure, found `()`
  --> tests/ui/errors/invalid_value.rs:20:16
   |
17 |       _ = mview! {
   |  _________-
18 | |         a href={};
19 | |         a href=();
20 | |         a href=[];
   | |                ^^ expected an `Fn()` closure, found `()`
21 | |     };
   | |_____- required by a bound introduced by this call
   |
   = help: the trait `Fn()` is not implemented for `()`, which is required by `{closure@$DIR/tests/ui/errors/invalid_value.rs:20:16: 20:18}: IntoAttribute`
   = note: wrap the `()` in a closure with no arguments: `|| { /* code */ }`
   = help: the following other types implement trait `IntoAttribute`:
             &'static str
             &std::string::String
             Arguments<'_>
             Cow<'static, str>
             Nonce
             Oco<'static, str>
             Rc<str>
             TextProp
           and $N others
   = note: required for `()` to implement `IntoAttribute`
   = note: 1 redundant requirement hidden
   = note: required for `{closure@$DIR/tests/ui/errors/invalid_value.rs:20:16: 20:18}` to implement `IntoAttribute`
note: required by a bound in `leptos::HtmlElement::<El>::attr`
  --> $CARGO/leptos_dom-0.6.12/src/html.rs
   |
   |     pub fn attr(
   |            ---- required by a bound in this associated function
...
   |         attr: impl IntoAttribute,
   |                    ^^^^^^^^^^^^^ required by this bound in `HtmlElement::<El>::attr`

error[E0277]: the trait bound `MissingValueAfterEq: IntoAttribute` is not satisfied
  --> tests/ui/errors/invalid_value.rs:27:15
   |
26 |       _ = mview! {
   |  _________-
27 | |         a href=
   | |               ^ the trait `Fn()` is not implemented for `MissingValueAfterEq`, which is required by `MissingValueAfterEq: IntoAttribute`
28 | |     };
   | |_____- required by a bound introduced by this call
   |
   = help: the following other types implement trait `IntoAttribute`:
             &'static str
             &std::string::String
             Arguments<'_>
             Cow<'static, str>
             Nonce
             Oco<'static, str>
             Rc<str>
             TextProp
           and $N others
   = note: required for `MissingValueAfterEq` to implement `IntoAttribute`
note: required by a bound in `leptos::HtmlElement::<El>::attr`
  --> $CARGO/leptos_dom-0.6.12/src/html.rs
   |
   |     pub fn attr(
   |            ---- required by a bound in this associated function
...
   |         attr: impl IntoAttribute,
   |                    ^^^^^^^^^^^^^ required by this bound in `HtmlElement::<El>::attr`
